style tweak to resolve add new animal form visibility issue on mobile

--- a/app/components/client/add-animal-form/addAnimalForm.module.css
+++ b/app/components/client/add-animal-form/addAnimalForm.module.css
@@ -4,7 +4,7 @@
   position: fixed;
   bottom: 0;
   right: 0;
-  top: calc(100vh - 45px);
+  top: calc(100% - 45px);
   background-color: var(--color-gray-900);
   color: white;
 }
